kubernetes/user.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: app-user
  labels:
    app: app-user
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app-user
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: app-user
    spec:
      containers:
        - name: app-user
          image: ghcr.io/drobyshevalex/app-user:latest
          imagePullPolicy: Always
      terminationGracePeriodSeconds: 5
---
kind: Service
apiVersion: v1
metadata:
  name: app-user
  labels:
    app: app-user
spec:
  type: ClusterIP
  ports:
    - name: grpc
      protocol: TCP
      port: 50051
      targetPort: 50051
  selector:
    app: app-user
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: user
spec:
  hosts:
    - "app-user"
  http:
    - route:
        - destination:
            host: app-user
            port:
              number: 50051
      retries:
        attempts: 3
        retryOn: connect-failure,refused-stream,5xx,unavailable,internal
